Completed section 21 Extra Features.

--- a/admin/css/sb-admin.css
+++ b/admin/css/sb-admin.css
@@ -274,3 +274,27 @@ ul.alert-dropdown {
        max-width: 200px;
        height: auto;
    }
+
+   .modal-dialog {
+    width: 90% !important;
+    
+}
+    
+.modal-body {
+    overflow: auto;
+    height: 500px !important;
+    min-height: 300px !important;
+}
+
+.modal_thumbnails {
+        width: 150px;
+        height: 100px !important;
+}
+
+#set_user_image {
+    argin:10px;
+}
+
+#modal_sidebar {
+    position: fixed !important;
+}
