--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -11,3 +11,28 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.modal-dialog {
+    width: 90% !important;
+    
+}
+    
+.modal-body {
+    overflow: auto;
+    height: 500px !important;
+    min-height: 300px !important;
+}
+
+.modal_thumbnails {
+        width: 150px;
+        height: 100px !important;
+}
+
+#set_user_image {
+    argin:10px;
+}
+
+#modal_sidebar {
+    position: fixed !important;
+}
+
