- Refactored code to use fusebox styled switches - Started integrating material theme - Added new functions to classes (see code)

--- a/admin/css/dropzone.css
+++ b/admin/css/dropzone.css
@@ -397,7 +397,7 @@
 /* Custom styles */
 
 .dropzone {
-    border: 6px dashed #0087F7;
+    border: 6px dashed #a540b8;
     border-radius: 5px;
     background: white;
 }
